...
    // MARK: Setup
    
    fileprivate func setupView()
    {
        backgroundColor = MMTAppearance.lightGrayBackgroundColor
        isAccessibilityElement = true
        accessibilityIdentifier = "MMTWamHeaderView"
    }
    
    // Mark: Overrides
    
    override func prepareForReuse()
    {
...
