...
        presented = true
        failureWatch = Timer.scheduledTimer(timeInterval: 5, target: self, selector: #selector(failureCheck), userInfo: nil, repeats: true)
        
        setupNotificationHandler()
        updateMeteorogramIfNeeded()
        
        analytics?.sendScreenEntryReport("Model WAM")
    }
    
    override func viewWillDisappear(_ animated: Bool)
    {
        super.viewWillDisappear(animated)
        
...
